arduino-ide-extension/src/browser/style/index.css
@import './list-widget.css';
@import './boards-config-dialog.css';
@import './main.css';
@import './dialogs.css';
@import './monitor.css';
@import './arduino-select.css';
@import './status-bar.css';
@import './terminal.css';
@import './editor.css';
@import './settings-dialog.css';
@import './firmware-uploader-dialog.css';
@import './ide-updater-dialog.css';
@import './certificate-uploader-dialog.css';
@import './user-fields-dialog.css';
@import './debug.css';
@import './sketchbook.css';
@import './cloud-sketchbook.css';
@import './fonts.css';
@import './custom-codicon.css';
@import './progress-bar.css';
@import './settings-step-input.css';

.theia-input.warning:focus {
  outline-width: 1px;
  outline-style: solid;
  outline-offset: -1px;
  opacity: 1 !important;
  color: var(--theia-warningForeground);
  background-color: var(--theia-warningBackground);
}

.theia-input.warning {
  background-color: var(--theia-warningBackground);
}

.theia-input.warning::placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: var(--theia-warningForeground);
  background-color: var(--theia-warningBackground);
  opacity: 1; /* Firefox */
}

.theia-input.warning:-ms-input-placeholder {
  /* Internet Explorer 10-11 */
  color: var(--theia-warningForeground);
  background-color: var(--theia-warningBackground);
}

.theia-input.warning::-ms-input-placeholder {
  /* Microsoft Edge */
  color: var(--theia-warningForeground);
  background-color: var(--theia-warningBackground);
}

/* Makes the sidepanel a bit wider when opening the widget */
.p-DockPanel-widget {
  min-width: 200px;
  min-height: 200px;
}

/* Overrule the default Theia CSS button styles. */
button.theia-button,
.theia-button {
  align-items: center;
  display: flex;
  font-family: 'Open Sans',sans-serif;
  font-style: normal;
  font-weight: 700;  
  font-size: 14px;
  justify-content: center;
  cursor: pointer;
  letter-spacing: .01em;
  line-height: 24px;
  outline: none;
  padding: 0 16px;
  position: relative;
  text-align: center;
  text-decoration: none;
  border-width: 2px;
  border-radius: 32px;
  text-transform: uppercase;
  transition: none;
  box-shadow: none;
}

button.theia-button {
  height: 28px;
  max-width: none;
}

.theia-button:active,
.theia-button:focus {
  box-shadow: 0 0 0 2px var(--theia-focusBorder);
}

button.theia-button.secondary {
  border: 2px solid var(--theia-secondaryButton-foreground);
}

button.theia-button[disabled], .theia-button[disabled] {
  opacity: 0.5;
  color: var(--theia-button-foreground);
  background-color: var(--theia-button-background);
}

button.secondary[disabled], .theia-button.secondary[disabled] {
  color: var(--theia-secondaryButton-foreground);
  background-color: var(--theia-secondaryButton-background);
}

/* To make the progress-bar slightly thicker, and use the color from the status bar */
.theia-progress-bar-container {
  width: 100%;
  height: 4px;
}

.theia-progress-bar {
  height: 4px;
  width: 3%;
  animation: progress-animation 1.3s 0s infinite
    cubic-bezier(0.645, 0.045, 0.355, 1);
}

.theia-notification-item-progressbar {
  height: 4px;
  width: 66%;
}

.flex-line {
  display: flex;
  align-items: center;
  white-space: nowrap;
}

.fa-reload {
  font-size: 14px;
}


/* High Contrast Theme rules */
/* TODO: Remove it when the Theia version is upgraded to 1.27.0 and use Theia APIs to implement it*/
.hc-black.hc-theia.theia-hc button.theia-button:hover, 
.hc-black.hc-theia.theia-hc .theia-button:hover {
  outline: 1px dashed var(--theia-focusBorder);
}

.hc-black.hc-theia.theia-hc button.theia-button,
.hc-black.hc-theia.theia-hc .theia-button,
.hc-black.hc-theia.theia-hc button.theia-button.secondary {
  border: 1px solid var(--theia-button-border);
}

.hc-black.hc-theia.theia-hc .theia-notification-list-item:hover:not(:focus) {
  background-color: var(--theia-notifications-background);
  outline: 1px dashed var(--theia-focusBorder);
  outline-offset: -2px;
}

